<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpt_sensorlib</name>
  <version>0.0.3</version>
  <description>C++ library for the base generic MRPT sensor node</description>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>
  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>

  <license>BSD</license>
  <url type="website">https://wiki.ros.org/mrpt_sensors</url>

  <!-- COMMON DEPS -->
  <build_depend>ros_environment</build_depend>

  <!-- BUILD TOOLS -->
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- COMMON DEPS -->
  <depend>mrpt2</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mrpt_msgs</depend>

  <!-- ROS1 -->
  <depend        condition="$ROS_VERSION == 1">roscpp</depend>
  <depend        condition="$ROS_VERSION == 1">message_generation</depend>
  <exec_depend   condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <!-- ROS2 -->
  <depend        condition="$ROS_VERSION == 2">rclcpp</depend>
  <test_depend   condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend   condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <build_depend  condition="$ROS_VERSION == 2">ament_cmake_xmllint</build_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
