<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpt_sensors_examples</name>
  <version>0.0.3</version>
  <description>Example launch and configuration files for mrpt_sensors nodes</description>

  <maintainer email="joseluisblancoc@gmail.com">José Luis Blanco-Claraco</maintainer>
  <author>José Luis Blanco-Claraco</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mrpt_generic_sensor</exec_depend>

</package>
